<resources>
    <string name="app_name">The logic factor</string>
    <string name="button_startGame">Играть</string>
    <string name="button_trainPlayers">Обучение</string>
    <string name="button_achivements">Достижения</string>
    <string name="button_settings">Настройки</string>
    <string name="action_settings">Настройки</string>
    <string name="textView_easy_question">Лёгкие вопросы</string>
    <string name="textView_normal_question">Средняя сложность</string>
    <string name="textView_hard_question">Сложные</string>
    <string name="text_no_questions">Вопросов больше нет</string>
    <string name="text_name_player">Имя игрока</string>
    <string name="text_summary_name_player">Выберите имя игрока</string>
    <string name="default_name_player">Пользователь</string>
    <string name="text_font_size">Размер шрифта</string>
    <string name="default_font_size">10</string>
    <string name="text_wrong">Неправильно</string>
    <string name="text_right">Правильно</string>
    <string name="text_no_answers">Вопросов больше нет</string>
    <string name="text_no_support">Вы не можете воспользоваться подсказкой</string>
    <string name="text_3_errors">Вы не получили денег, больше 3 ошибок в данном вопросе</string>
    <string name="text_you_answered">Вы уже ответили на данный вопрос</string>
    <string name="text_save">Сохранить</string>
    <string name="text_switch_off_music">Отключить музыку</string>
    <string name="text_confirm">Потвердить</string>
    <string name="text_support">Подсказка</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="textView_question">Вопрос</string>
    <string name="instruction_1">1) У вас 3 попытки, чтобы ответить верно. В дальнейшем монеты не будут зачисляться.</string>
    <string name="instruction_2">2) Ответ можно писать, как БОЛЬШИМИ, так и маленькими буквами.</string>
    <string name="instruction_3">3) Ответ пишите грамматически ВЕРНО, так как неправильные считаются как ошибка.</string>
    <string name="copyright">©2016, Байдерин Тимофей, Коротцев Егор(игровая часть), Илья Носков(музыкальное сопровождение)</string>
    <string name="text_answer">Ответ</string>
    <string name="text_from_10_to_25">от 10 до 25</string>
</resources>
