<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center_horizontal"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_alignParentTop="true"
        android:weightSum="1">

        <Button
            android:layout_width="252dp"
            android:layout_height="wrap_content"
            android:text="@string/button_startGame"
            android:textSize="20sp"
            android:id="@+id/button_play"
            android:drawableLeft="@drawable/picture_play" />

        <Button
            android:layout_width="252dp"
            android:layout_height="wrap_content"
            android:text="@string/button_trainPlayers"
            android:textSize="20sp"
            android:id="@+id/button_train"
            android:drawableLeft="@drawable/picture_train_players"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_achivements"
            android:textSize="20sp"
            android:drawableLeft="@drawable/picture_achievments"
            android:id="@+id/button_achievments"
            android:layout_weight="0.04" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/picture_settings"
            android:text="@string/button_settings"
            android:textSize="20sp"
            android:id="@+id/button_options" />

    </LinearLayout>
</LinearLayout>
